Restructure.
* org/xvm/XEC.java - entry point
* org/xvm/xtc - Read an XTC file support classes; ClassPart, *Part, CPool,Version,VerTree
* org/xvm/xtc/cons - "cons" things from XTC files
* org/xvm/xtc/AST  - "AST"  things from XTC files

org/xvm/xec - generated class strings act "as if" loaded from here
* org/xvm/xec - runtime support classes (no ties with gen classes)
* org/xvm/xec/XClz - base class for gen'd classes.
* org/xvm/xec/XRunClz - Runnable XClz